--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "system-number-transformer",
+  "name": "ReactNumberTransformer",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://patrykmaternicki.github.io/SystemNumberTransformator/",
+  "homepage": "https://patrykmaternicki.github.io/ReactNumberTransformer/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
